2005-05-19 Paul Jakma <paul@dishone.st>

	* bgp_fsm.c: (bgp_stop) use sockunion_free, not XFREE..
	* bgp_network.c: (bgp_getsockname) ditto
	* bgp_routemap.c: (route_match_peer) ditto, als use a ret value and
	  remove one sockunion_free.
	* bgpd.c: (peer_delete) ditto

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_zebra.c (bgp_redistribute_set, bgp_redistribute_unset):
	  The 2nd arg to zebra_redistribute_send is now zclient instead of
	  zclient->sock.

2005-04-09 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_vty.c: Make "exit-address-family" work in IPv4 unicast address
	  family node.

2005-04-08 Martin Ling <martin-quagga@earth.li>

	* bgp_aspath.[ch], bgp_route.c, bgp_vty.c, bgpd.[ch]: Allow to enable
	  the length of confederation path segments to be included during the
	  as-path length check in the best path decision.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_zebra.c: (bgp_interface_delete) After deleting, set ifp->ifindex
	  to IFINDEX_INTERNAL.

2005-03-21 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Don't crash while clearing route tables if there is
	  no particular afi/safi configured.

2005-02-23 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Make reannouncing prefixes with changed attributes
	  work again.

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_vty.c: Deprecate "neighbor transparent-as" and "neighbor
	  transparent-nexthop" commands.

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_routemap.c: New route-map command - "match ip route-source".

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_clist.[ch], bgp_route.c, bgp_routemap.c, bgp_vty.c:
	  community-list cleanup.

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_route.c, bgp_vty.c, bgp_zebra.c, bgpd.[ch]: "enforce-multihop"
	  -> "disable-connected-check".

2005-02-02 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_fsm.c, bgp_open.c, bgp_packet.c, bgp_route.[ch], bgp_vty.c,